# models/index.js
@@ -1,3 +1,4 @@
+const ActionMessage = require('@models/actionMessage');
 const ActionTemplate = require('@models/actionTemplate');
 const ActionType = require('@models/actionType');
 const Client = require('@models/client');
@@ -7,6 +8,7 @@ const EventType = require('@models/eventType');
 const Rule = require('@models/rule');
 
 const models = {
+    ActionMessage,
     ActionTemplate,
     ActionType,
     Client,
