# routes/index.js
@@ -1,5 +1,6 @@
 const CombineRouters = require('koa-combine-routers');
 
+const actionMessages = require('@routes/actionMessages');
 const actionTemplates = require('@routes/actionTemplates');
 const actionTypes = require('@routes/actionTypes');
 const clients = require('@routes/clients');
@@ -9,6 +10,7 @@ const rules = require('@routes/rules');
 const swagger = require('@routes/swagger');
 
 const router = CombineRouters([
+    actionMessages,
     actionTemplates,
     actionTypes,
     clients,
